--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -52,5 +52,15 @@
                 </MudGrid>
             </MudPaper>
         </MudLink>
+        <MudLink Href="/nc" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">Деревянный <s>сундук</s> программист</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>
     </MudGrid>
 </MudContainer>
