--- a/Sunduk.PWA/Pages/ThreadInfoPage.razor
+++ b/Sunduk.PWA/Pages/ThreadInfoPage.razor
@@ -100,7 +100,7 @@
         <MudItem xs="12">
             <MudTextField Variant="Variant.Outlined" Style="font-family: Consolas" ReadOnly="true" Lines="3" Value="@($"G0 X{ApproachDiameter} Z0. S{SpindleSpeed} M3 G97\n" +
                                 $"G76 P0201{ThreadProfile} Q{(int)(Passes.Last()*1000)} R0.1\n" +
-                                $"G76 X{EndDiameter} Z-20. P{(int)(Passes.Sum()*1000)} Q{(int)(Passes[0]*1000)} F{ThreadPitch.ToString("F3").Replace(",", ".").Replace(".00", ".").Trim('0')}")">
+                                $"G76 X{EndDiameter} Z-20. P{(int)(Passes.Sum()*1000)} Q{(int)(Passes[0]*1000)} F{ThreadPitch.NC()}")">
             </MudTextField>
         </MudItem>
     </MudExpansionPanel>
@@ -119,10 +119,10 @@
 
     public readonly HashSet<string> metricTemplates =
     new HashSet<string> {
-        "M2x0.4 (Стандартный)", "M2x0.25 (Мелкий)",
-        "M2.5x0.45 (Стандартный)", "M2.5x0.35 (Мелкий)",
-        "M3x0.5 (Стандартный)", "M3x0.35 (Мелкий)",
-        "M3.5x0.6 (Стандартный)", "M3.5x0.35 (Мелкий)",
+        //"M2x0.4 (Стандартный)", "M2x0.25 (Мелкий)",
+        //"M2.5x0.45 (Стандартный)", "M2.5x0.35 (Мелкий)",
+        //"M3x0.5 (Стандартный)", "M3x0.35 (Мелкий)",
+        //"M3.5x0.6 (Стандартный)", "M3.5x0.35 (Мелкий)",
         "M4x0.7 (Стандартный)", "M4x0.5 (Мелкий)", "M4.5x0.75", "M4.5x0.5 (Мелкий)",
         "M5x0.8 (Стандартный)", "M5x0.5 (Мелкий)", "M5.5x0.5 (Стандартный)",
         "M6x1 (Стандартный)", "M6x0.75 (Мелкий)", "M6x0.5 (Мелкий)",
@@ -196,26 +196,26 @@
         "M190x8 (Стандартный)", "M190x6 (Мелкий)", "M190x4 (Мелкий)", "M190x3 (Мелкий)", "M190x2 (Мелкий)",
         "M195x6 (Стандартный)", "M195x4 (Мелкий)", "M195x3 (Мелкий)", "M195x2 (Мелкий)",
         "M200x8 (Стандартный)", "M200x6 (Мелкий)", "M200x4 (Мелкий)", "M200x3 (Мелкий)", "M200x2 (Мелкий)",
-        "M205x6 (Стандартный)", "M205x4 (Мелкий)", "M205x3 (Мелкий)",
-        "M210x8 (Стандартный)", "M210x6 (Мелкий)", "M210x4 (Мелкий)", "M210x3 (Мелкий)",
-        "M215x6 (Стандартный)", "M215x4 (Мелкий)", "M215x3 (Мелкий)",
-        "M220x8 (Стандартный)", "M220x6 (Мелкий)", "M220x4 (Мелкий)", "M220x3 (Мелкий)",
-        "M225x6 (Стандартный)", "M225x4 (Мелкий)", "M225x3 (Мелкий)",
-        "M230x8 (Стандартный)", "M230x6 (Мелкий)", "M230x4 (Мелкий)", "M230x3 (Мелкий)",
-        "M235x6 (Стандартный)", "M235x4 (Мелкий)", "M235x3 (Мелкий)",
-        "M240x8 (Стандартный)", "M240x6 (Мелкий)", "M240x4 (Мелкий)", "M240x3 (Мелкий)",
-        "M245x6 (Стандартный)", "M245x4 (Мелкий)", "M245x3 (Мелкий)",
-        "M250x8 (Стандартный)", "M250x6 (Мелкий)", "M250x4 (Мелкий)", "M250x3 (Мелкий)",
-        "M255x6 (Стандартный)", "M255x4 (Мелкий)", "M255x3 (Мелкий)",
-        "M260x8 (Стандартный)", "M260x6 (Мелкий)", "M260x4 (Мелкий)", "M260x3 (Мелкий)",
-        "M265x6 (Стандартный)", "M265x4 (Мелкий)", "M265x3 (Мелкий)",
-        "M270x8 (Стандартный)", "M270x6 (Мелкий)", "M270x4 (Мелкий)", "M270x3 (Мелкий)",
-        "M275x6 (Стандартный)", "M275x4 (Мелкий)", "M275x3 (Мелкий)",
-        "M280x8 (Стандартный)", "M280x6 (Мелкий)", "M280x4 (Мелкий)", "M280x3 (Мелкий)",
-        "M285x6 (Стандартный)", "M285x4 (Мелкий)", "M285x3 (Мелкий)",
-        "M290x8 (Стандартный)", "M290x6 (Мелкий)", "M290x4 (Мелкий)", "M290x3 (Мелкий)",
-        "M295x6 (Стандартный)", "M295x4 (Мелкий)", "M295x3 (Мелкий)",
-        "M300x8 (Стандартный)", "M300x6 (Мелкий)", "M300x4 (Мелкий)", "M300x3 (Мелкий)",
+        //"M205x6 (Стандартный)", "M205x4 (Мелкий)", "M205x3 (Мелкий)",
+        //"M210x8 (Стандартный)", "M210x6 (Мелкий)", "M210x4 (Мелкий)", "M210x3 (Мелкий)",
+        //"M215x6 (Стандартный)", "M215x4 (Мелкий)", "M215x3 (Мелкий)",
+        //"M220x8 (Стандартный)", "M220x6 (Мелкий)", "M220x4 (Мелкий)", "M220x3 (Мелкий)",
+        //"M225x6 (Стандартный)", "M225x4 (Мелкий)", "M225x3 (Мелкий)",
+        //"M230x8 (Стандартный)", "M230x6 (Мелкий)", "M230x4 (Мелкий)", "M230x3 (Мелкий)",
+        //"M235x6 (Стандартный)", "M235x4 (Мелкий)", "M235x3 (Мелкий)",
+        //"M240x8 (Стандартный)", "M240x6 (Мелкий)", "M240x4 (Мелкий)", "M240x3 (Мелкий)",
+        //"M245x6 (Стандартный)", "M245x4 (Мелкий)", "M245x3 (Мелкий)",
+        //"M250x8 (Стандартный)", "M250x6 (Мелкий)", "M250x4 (Мелкий)", "M250x3 (Мелкий)",
+        //"M255x6 (Стандартный)", "M255x4 (Мелкий)", "M255x3 (Мелкий)",
+        //"M260x8 (Стандартный)", "M260x6 (Мелкий)", "M260x4 (Мелкий)", "M260x3 (Мелкий)",
+        //"M265x6 (Стандартный)", "M265x4 (Мелкий)", "M265x3 (Мелкий)",
+        //"M270x8 (Стандартный)", "M270x6 (Мелкий)", "M270x4 (Мелкий)", "M270x3 (Мелкий)",
+        //"M275x6 (Стандартный)", "M275x4 (Мелкий)", "M275x3 (Мелкий)",
+        //"M280x8 (Стандартный)", "M280x6 (Мелкий)", "M280x4 (Мелкий)", "M280x3 (Мелкий)",
+        //"M285x6 (Стандартный)", "M285x4 (Мелкий)", "M285x3 (Мелкий)",
+        //"M290x8 (Стандартный)", "M290x6 (Мелкий)", "M290x4 (Мелкий)", "M290x3 (Мелкий)",
+        //"M295x6 (Стандартный)", "M295x4 (Мелкий)", "M295x3 (Мелкий)",
+        //"M300x8 (Стандартный)", "M300x6 (Мелкий)", "M300x4 (Мелкий)", "M300x3 (Мелкий)",
 };
 
     public readonly HashSet<string> bsppTemplates =
