--- a/Sunduk.PWA/Components/DrillAngleComponent.razor
+++ b/Sunduk.PWA/Components/DrillAngleComponent.razor
@@ -25,6 +25,6 @@
     public string DrillAngleString { get; set; }
     public double DrillAngle { get => Util.GetDouble(DrillAngleString); }
 
-    public string ResultMessage { get => $"Длина конуса {Util.ToPrettyString((DrillDiameter / 2) * Math.Tan(Util.Radians(90 - DrillAngle / 2)))} мм"; }
+    public string ResultMessage { get => $"Длина конуса {((DrillDiameter / 2) * Math.Tan((90 - DrillAngle / 2).Radians())).ToPrettyString()} мм"; }
 
 }
